<resources>
    <string name="app_name">Eris PG-414</string>
    <string name="info">Info: </string>
    <string name="Zavod">Serial number: </string>
    <string name="Coord">Coords: </string>
    <string name="Charge">Battery:</string>
    <string name="Temperature">Temperature: </string>
    <string name="state">State:</string>
    <string name="err_adapter">Error adapter</string>
    <string name="start_scan">Start scanning...</string>
    <string name="scan_error">Scan error</string>
    <string name="Scan_stopped">Scan stopped</string>
    <string name="params_reading">Reading params</string>
    <string name="connect">Connecting...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="disconnected">Disconnected</string>
    <string name="services_search">Search for services</string>
    <string name="characteristic_search">Search for characteristic</string>
    <string name="dyn_reading">Reading dynamic parameters</string>
    <string name="static_reading">Reading static parameters</string>
    <string name="switch_reading">Reading switchable parameters</string>
    <string name="un_package">Unknown package</string>
    <string name="info_read">Reading info completed</string>
    <string name="err_con_message">Unable to connect to the device. Make sure Bluetooth is turned on and the device is nearby, then try again.</string>
    <string name="con_restored">Connection restored</string>
    <string name="h2s">H2S, ppm</string>
    <string name="co">CO, ppm</string>
    <string name="o2">O2, %VOL</string>
    <string name="ch4">CH4, %LEL</string>
    <string name="un_logi">Authorisation error</string>
    <string name="Server_aerror">Error connection to server</string>
    <string name="err_con_dev">Connection lost to device</string>
    <string name="params">Reading params</string>
    <string name="offline">Offline mode</string>
    <string name="Scan">Scan</string>
    <string name="Stop">Stop</string>
    <string name="Login">Login:</string>
    <string name="Password">Password:</string>
    <string name="Title">Title:</string>
    <string name="Next">Next</string>
    <string name="Get_connect">Need start connect to device</string>
    <string name="Device">"Device: "</string>
    <string name="Config_but">"Configuration"</string>
    <string name="Enter_server">"Enter server address"</string>
    <string name="Disconnect_but">"Disconnect"</string>
    <string name="Connect_but">"Connect"</string>
    <string name="Archive">"Archive"</string>
    <string name="Arch_Toast">"Number of Unsent Packages"</string>
    <string name="Refresh_data">"Update device data"</string>
    <string name="Sendnig_Arch">Sending archive block</string>
    <string name="Message_powermanage">For the application to work correctly, you must turn off energy optimization</string>
    <string name="Geo_work">Determination of geolocation</string>
    <string name="Geo_work_text">The geolocation in the background</string>
    <string name="Clear_file">Clear file-archive?</string>
    <string name="Alert_title">Alert</string>
    <string name="need_location">For the application to work, you must enable access to the location</string>
    <string name="channel_name">Eris notification</string>
    <string name="channel_description">Notification</string>
    <string name="con_lost">Lost connection with device</string>
    <string name="immobility">Immobility sensor</string>
    <string name="send_to_server">Send to server</string>
    <string name="check_gps">Check gps settings</string>
</resources>
